--- a/booking_react/src/components/chois_flat/ChoisFlat.module.css
+++ b/booking_react/src/components/chois_flat/ChoisFlat.module.css
@@ -1,7 +1,42 @@
+.drop {
+  background: linear-gradient(to bottom, #00095e 0%, #0c0c1f 100%);
+  --bs-btn-color: #ffffff;
+  --bs-btn-border-color: #00095e;
+  --bs-btn-hover-color: rgb(255, 255, 255);
+  --bs-btn-hover-bg: #0c0c1f;
+  --bs-btn-hover-border-color: #0c0c1f;
+  --bs-btn-focus-shadow-rgb: 25, 135, 84;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #0c0c1f;
+  --bs-btn-active-border-color: #0c0c1f;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #0c0c1f;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #0c0c1f;
+  --bs-gradient: none;
+}
+
+.drop:hover {
+  background: linear-gradient(to bottom, #0011a5 0%, #272763 100%);
+}
+
+.select {
+  --bs-btn-color: #fff;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-active-color: #fff;
+  --bs-btn-disabled-color: #fff;
+}
+
+.dateWrapper {
+  color: #ffffff;
+  background: transparent;
+}
+
 .dateWrapper,
 .nav {
   display: flex;
   gap: 20px;
+  justify-content: center;
 }
 
 .date {
