--- a/booking_react/src/components/dropdown_region/DropdownRegion.module.css
+++ b/booking_react/src/components/dropdown_region/DropdownRegion.module.css
@@ -1,3 +1,25 @@
+.dropBtn {
+  background: linear-gradient(to bottom, #00095e 0%, #0c0c1f 100%);
+  --bs-btn-color: #ffffff;
+  --bs-btn-border-color: #00095e;
+  --bs-btn-hover-color: rgb(255, 255, 255);
+  --bs-btn-hover-bg: #0c0c1f;
+  --bs-btn-hover-border-color: #0c0c1f;
+  --bs-btn-focus-shadow-rgb: 25, 135, 84;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #0c0c1f;
+  --bs-btn-active-border-color: #0c0c1f;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #0c0c1f;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #0c0c1f;
+  --bs-gradient: none;
+}
+
+.dropBtn:hover {
+  background: linear-gradient(to bottom, #0011a5 0%, #272763 100%);
+}
+
 .tooltip {
   --bs-tooltip-bg: rgb(147, 0, 0);
   font-weight: 700;
@@ -20,4 +42,8 @@
   border-right: .3em solid transparent;
   border-bottom: 0;
   border-left: .3em solid transparent;
+}
+
+.menu {
+  transform: translate3d(0px, 70px, 0px) !important;
 }
