--- a/booking_react/src/components/header/Header.module.css
+++ b/booking_react/src/components/header/Header.module.css
@@ -1,8 +1,26 @@
-.login {
-  /* color: blueviolet; */
+.header {
+  height: 102px;
 }
 
-.head {
-  background-color: #c7c7c7;
-  border-radius: 10px;
+.login {
+  --bs-btn-color: #fff;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-active-color: #fff;
+  --bs-btn-disabled-color: #fff;
 }
+
+.login img {
+  margin-right: 10px;
+}
+
+.nav {
+  margin-left: auto;
+}
+
+.headerInner {
+  display: flex;
+  padding: 20px 0;
+  align-items: center;
+  gap: 16px;
+}
+
