--- a/booking_react/src/index.css
+++ b/booking_react/src/index.css
@@ -1,3 +1,25 @@
+@import url('./components/home/carousel/Carousel.css');
+
+@font-face {
+  font-family: Comfortaa;
+  src: url('../public/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf');
+}
+
+@font-face {
+  font-family: Fusion;
+  src: url('../public/fonts/fusion_bold.ttf');
+}
+
+@font-face {
+  font-family: Haas;
+  src: url('../public/fonts/AlteHaasGroteskBoldZhukov/altehaasgroteskboldzhukov_bold.otf');
+}
+
+@font-face {
+  font-family: Adys;
+  src: url('../public/fonts/ofont.ru_Adys.ttf');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +27,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 code {
@@ -19,4 +42,9 @@ li {
 ul,
 li {
   padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: Adys, Roboto, sans-serif;
+  --bs-heading-color: #00095E;
 }
