--- a/booking_react/src/components/footer/Footer.module.css
+++ b/booking_react/src/components/footer/Footer.module.css
@@ -1,10 +1,33 @@
 .footer {
-  display: flex;
-  align-items: center;
   background: linear-gradient(135deg, #1a2d6d 0%, #0c1534 100%);
-  height: 40vh;
+  height: 300px;
+}
+
+.container {
+  padding-top: 50px;
+  /* display: flex; */
+  /* justify-content: space-between;
+  align-items: center; */
 }
 
 .logoImg::before {
   border-color: #fff !important;
+}
+
+.copyright {
+  color: #fff;
+}
+
+.rowMain {
+  height: 200px;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.nav img {
+  margin-right: 20px;
 }
