--- a/booking_react/src/components/chois_flat/ChoisFlat.module.css
+++ b/booking_react/src/components/chois_flat/ChoisFlat.module.css
@@ -14,6 +14,7 @@
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #0c0c1f;
   --bs-gradient: none;
+  width: 100%;
 }
 
 .drop:hover {
@@ -25,6 +26,8 @@
   --bs-btn-hover-color: #fff;
   --bs-btn-active-color: #fff;
   --bs-btn-disabled-color: #fff;
+  width: 100%;
+  height: 100%;
 }
 
 .dateWrapper {
@@ -39,6 +42,11 @@
   justify-content: center;
 }
 
+.nav {
+  width: fit-content;
+  margin: 0 auto;
+}
+
 .date {
   width: 100px;
   height: 30px;
@@ -48,4 +56,8 @@
 .dropdownItem:active,
 .dropdownItem:hover {
   background-color: initial;
+}
+
+.col {
+  padding: 0;
 }
